--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "template-next",
+  "name": "xenon",
   "version": "1.0.0",
   "private": true,
-  "author": "lumen-limitless",
   "license": "MIT",
+  "author": "lumen-limitless",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
     "analyze": "ANALYZE=true next build",
-    "sitemap": "next-sitemap"
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "sitemap": "next-sitemap",
+    "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-hover-card": "^1.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.3",
@@ -37,43 +41,50 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@svgr/webpack": "^8.0.1",
-    "@tailwindcss/typography": "^0.5.9",
-    "@vercel/analytics": "^1.0.1",
-    "autoprefixer": "^10.4.14",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@vercel/analytics": "^1.0.2",
+    "autoprefixer": "^10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "framer-motion": "^10.12.16",
-    "lucide-react": "^0.244.0",
-    "mongodb": "^5.6.0",
-    "next": "^13.4.6",
-    "next-auth": "^4.22.1",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.279.0",
+    "mongodb": "^6.1.0",
+    "next": "^13.4.19",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.3",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.29",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-packagejson": "^2.4.5",
     "react": "^18.2.0",
+    "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-use": "^17.4.0",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "^3.3.2",
-    "tailwindcss-animate": "^1.0.6",
-    "zustand": "^4.3.8"
+    "sharp": "^0.32.5",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.4.6",
-    "@next/env": "^13.4.6",
-    "@types/node": "^20.3.1",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "typescript": "5.1.3"
+    "@next/bundle-analyzer": "^13.4.19",
+    "@next/env": "^13.4.19",
+    "@types/node": "^20.6.2",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "typescript": "5.2.2"
   }
 }
