add postgres and auth

--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "author": "lumen-limitless",
   "scripts": {
     "analyze": "ANALYZE=true next build",
+    "prebuild": "prisma generate",
     "build": "next build",
+    "predev": "prisma generate",
     "dev": "next dev",
     "lint": "next lint",
-    "sitemap": "next-sitemap",
     "start": "next start"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.2",
     "@hookform/resolvers": "^3.3.1",
+    "@prisma/client": "^5.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -44,27 +47,26 @@
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@vercel/analytics": "^1.0.2",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.279.0",
-    "mongodb": "^6.1.0",
-    "next": "^13.4.19",
+    "next": "^13.5.2",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.3",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.30",
     "prettier-plugin-organize-imports": "^3.2.3",
     "prettier-plugin-packagejson": "^2.4.5",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1",
+    "react-hook-form": "^7.46.2",
     "react-use": "^17.4.0",
-    "sharp": "^0.32.5",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
@@ -72,19 +74,24 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.4.19",
-    "@next/env": "^13.4.19",
-    "@types/node": "^20.6.2",
-    "@types/react": "^18.2.21",
+    "@next/bundle-analyzer": "^13.5.2",
+    "@next/env": "^13.5.2",
+    "@types/node": "^20.6.3",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "prisma": "^5.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "5.2.2"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} --transpile-only prisma/seed.ts"
   }
 }
