--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "build": "next build",
     "predev": "prisma generate",
     "dev": "next dev",
+    "generate": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest && exec playwright test",
+    "test:e2e": "exec playwright test",
+    "test:unit": "jest"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.2",
+    "@auth/prisma-adapter": "^1.0.3",
     "@hookform/resolvers": "^3.3.1",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.4.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -46,16 +50,17 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@vercel/analytics": "^1.0.2",
+    "@vercel/analytics": "^1.1.0",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.41.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.279.0",
-    "next": "^13.5.3",
-    "next-auth": "^4.23.1",
+    "next": "^13.5.4",
+    "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "^8.4.31",
@@ -64,30 +69,36 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.2",
+    "react-hook-form": "^7.47.0",
     "react-use": "^17.4.0",
     "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.2",
-    "zustand": "^4.4.1"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.5.3",
-    "@next/env": "^13.5.3",
-    "@types/node": "^20.7.1",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
+    "@next/bundle-analyzer": "^13.5.4",
+    "@next/env": "^13.5.4",
+    "@playwright/test": "^1.38.1",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.2",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.10",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "prisma": "^5.3.1",
+    "prettier-plugin-tailwindcss": "^0.5.5",
+    "prisma": "^5.4.1",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   },
