--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "lucide-react": "^0.284.0",
     "next": "^13.5.4",
     "next-auth": "^4.23.2",
-    "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "^8.4.31",
     "prettier-plugin-organize-imports": "^3.2.3",
@@ -86,8 +85,8 @@
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.4",
-    "@types/react": "^18.2.27",
-    "@types/react-dom": "^18.2.12",
+    "@types/react": "18.2.27",
+    "@types/react-dom": "18.2.11",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "8.51.0",
