--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"]
+  "extends": ["next/core-web-vitals", "prettier"]
 }
