--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env
-.env*.local
+.env*
 
 # vercel
 .vercel
@@ -41,5 +40,13 @@ firebase.json
 # typescript
 *.tsbuildinfo
 
+# docker
 data/
+
+# pnpm
 .pnpm-store
+
+# playwright
+/test-results/
+/playwright-report/
+/playwright/.cache/
