--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "test:unit": "jest"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.3",
+    "@auth/prisma-adapter": "^1.0.5",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -48,6 +48,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/stripe-js": "^2.1.11",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@vercel/analytics": "^1.1.1",
@@ -58,43 +59,44 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
-    "lucide-react": "^0.287.0",
-    "next": "^13.5.5",
-    "next-auth": "^4.23.2",
+    "lucide-react": "^0.292.0",
+    "next": "^14.0.1",
+    "next-auth": "^4.24.4",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "^8.4.31",
     "prettier-plugin-organize-imports": "^3.2.3",
     "prettier-plugin-packagejson": "^2.4.6",
     "react": "^18.2.0",
-    "react-day-picker": "^8.9.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.48.2",
     "react-use": "^17.4.0",
     "sharp": "^0.32.6",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3",
+    "stripe": "^14.3.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
-    "zustand": "^4.4.3"
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.5.5",
-    "@next/env": "^13.5.5",
+    "@next/bundle-analyzer": "^14.0.1",
+    "@next/env": "^14.0.1",
     "@playwright/test": "^1.39.0",
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.5",
-    "@types/node": "^20.8.6",
-    "@types/react": "18.2.28",
-    "@types/react-dom": "18.2.11",
-    "eslint": "8.51.0",
-    "eslint-config-next": "13.5.5",
+    "@testing-library/react": "^14.1.0",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.1",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
-    "prisma": "^5.4.2",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "prisma": "^5.5.2",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   },
