--- a/package.json
+++ b/package.json
@@ -68,10 +68,11 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-use": "^17.4.0",
     "sharp": "^0.32.6",
-    "stripe": "^14.4.0",
+    "stripe": "^14.5.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
@@ -81,14 +82,14 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.3",
     "@next/env": "^14.0.3",
-    "@playwright/test": "^1.39.0",
+    "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.0",
+    "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.9.1",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
-    "eslint": "8.53.0",
+    "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
