--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,17 @@
   "name": "Xenon",
   "short_name": "Xenon",
   "icons": [
-    { "src": "/icons/icon-144x144.png", "purpose": "any", "sizes": "144x144" }
+    { "src": "/icons/icon-144x144.png", "purpose": "any", "sizes": "144x144" },
+    {
+      "src": "/icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ],
   "screenshots": [
     {
