--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@sanity/image-url": "1",
+    "@sanity/vision": "3",
     "@stripe/stripe-js": "^2.1.11",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-table": "^8.10.7",
     "@vercel/analytics": "^1.1.1",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
@@ -63,6 +66,7 @@
     "lucide-react": "^0.292.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
+    "next-sanity": "5",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
@@ -71,8 +75,10 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-use": "^17.4.0",
+    "sanity": "3",
     "sharp": "^0.32.6",
     "stripe": "^14.5.0",
+    "styled-components": "6",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
