--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "test:unit": "jest"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.7",
+    "@auth/prisma-adapter": "^1.0.8",
     "@ducanh2912/next-pwa": "^9.7.2",
     "@hookform/resolvers": "^3.3.2",
+    "@portabletext/react": "^3.0.11",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -49,9 +50,9 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@sanity/image-url": "1",
-    "@sanity/vision": "3",
-    "@stripe/stripe-js": "^2.1.11",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.20.1",
+    "@stripe/stripe-js": "^2.2.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-table": "^8.10.7",
@@ -66,7 +67,7 @@
     "lucide-react": "^0.292.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
-    "next-sanity": "5",
+    "next-sanity": "^6.0.5",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
@@ -75,10 +76,10 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-use": "^17.4.0",
-    "sanity": "3",
+    "sanity": "^3.20.1",
     "sharp": "^0.32.6",
     "stripe": "^14.5.0",
-    "styled-components": "6",
+    "styled-components": "^6.1.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
@@ -91,10 +92,10 @@
     "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.2",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.9.4",
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.2.17",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.0.0",
@@ -106,7 +107,7 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
-    "typescript": "5.2.2",
+    "typescript": "5.3.2",
     "webpack": "^5.89.0"
   },
   "prisma": {
