--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "author": "lumen-limitless",
   "scripts": {
     "analyze": "ANALYZE=true next build",
-    "prebuild": "prisma generate",
+    "prebuild": "",
     "build": "next build",
-    "predev": "prisma generate",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:push": "drizzle-kit push:pg",
+    "db:studio": "drizzle-kit studio",
+    "predev": "",
     "dev": "next dev",
-    "generate": "prisma generate",
     "lint": "next lint",
     "start": "next start",
     "test": "jest && exec playwright test",
@@ -18,12 +20,12 @@
     "test:unit": "jest"
   },
   "dependencies": {
-    "@auth/core": "^0.26.3",
-    "@auth/prisma-adapter": "^1.3.3",
-    "@ducanh2912/next-pwa": "^10.2.5",
+    "@auth/core": "^0.29.0",
+    "@auth/drizzle-adapter": "^0.9.0",
+    "@ducanh2912/next-pwa": "^10.2.6",
     "@hookform/resolvers": "^3.3.4",
-    "@portabletext/react": "^3.0.11",
-    "@prisma/client": "^5.9.1",
+    "@portabletext/react": "^3.0.17",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -53,69 +55,75 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.28.0",
-    "@stripe/stripe-js": "^2.4.0",
+    "@sanity/vision": "^3.36.4",
+    "@stripe/stripe-js": "^3.2.0",
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-table": "^8.11.8",
-    "@vercel/analytics": "^1.1.3",
-    "autoprefixer": "^10.4.17",
+    "@tailwindcss/typography": "^0.5.12",
+    "@tanstack/react-table": "^8.15.3",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/postgres": "^0.8.0",
+    "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.0.1",
+    "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
-    "date-fns": "^3.3.1",
-    "embla-carousel-react": "8.0.0-rc22",
-    "framer-motion": "^11.0.3",
-    "lucide-react": "^0.330.0",
-    "next": "^14.1.0",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.7",
+    "embla-carousel-react": "8.0.1",
+    "framer-motion": "^11.0.25",
+    "lucide-react": "^0.365.0",
+    "next": "^14.1.4",
     "next-auth": "5.0.0-beta.9",
-    "next-sanity": "^7.1.4",
-    "next-themes": "^0.2.1",
+    "next-sanity": "^8.5.5",
+    "next-themes": "^0.3.0",
     "nextjs-google-analytics": "^2.3.3",
-    "postcss": "^8.4.35",
+    "pg": "^8.11.5",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.50.1",
-    "react-resizable-panels": "^2.0.6",
+    "react-hook-form": "^7.51.2",
+    "react-resizable-panels": "^2.0.16",
     "react-use": "^17.5.0",
-    "sanity": "^3.28.0",
-    "sharp": "^0.33.2",
-    "sonner": "^1.4.0",
-    "stripe": "^14.16.0",
+    "sanity": "^3.36.4",
+    "sharp": "^0.33.3",
+    "sonner": "^1.4.41",
+    "stripe": "^14.24.0",
     "styled-components": "^6.1.8",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
     "zod": "^3.22.4",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.1.0",
-    "@next/env": "^14.1.0",
-    "@playwright/test": "^1.41.2",
+    "@next/bundle-analyzer": "^14.1.4",
+    "@next/env": "^14.1.4",
+    "@playwright/test": "^1.43.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/react": "^14.2.2",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.17",
-    "@types/react": "18.2.55",
-    "@types/react-dom": "18.2.19",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "@types/node": "^20.12.5",
+    "@types/pg": "^8.11.4",
+    "@types/react": "18.2.74",
+    "@types/react-dom": "18.2.24",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "9.0.0",
+    "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-packagejson": "^2.4.10",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.9.1",
+    "prettier-plugin-packagejson": "^2.4.14",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "ts-node": "^10.9.2",
-    "typescript": "5.3.3",
-    "webpack": "^5.90.1"
+    "tsx": "^4.7.2",
+    "typescript": "5.4.4",
+    "webpack": "^5.91.0"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} --transpile-only prisma/seed.ts"
