--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "db:studio": "drizzle-kit studio",
     "predev": "",
     "dev": "next dev",
+    "format": "prettier --write .",
     "lint": "next lint",
     "start": "next start",
     "test": "jest && exec playwright test",
     "test:e2e": "exec playwright test",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/core": "^0.29.0",
-    "@auth/drizzle-adapter": "^0.9.0",
-    "@ducanh2912/next-pwa": "^10.2.6",
-    "@hookform/resolvers": "^3.3.4",
-    "@portabletext/react": "^3.0.17",
-    "@prisma/client": "^5.12.1",
+    "@auth/core": "^0.32.0",
+    "@auth/drizzle-adapter": "0.0.0-manual.ab481298",
+    "@ducanh2912/next-pwa": "^10.2.7",
+    "@hookform/resolvers": "^3.4.2",
+    "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -56,74 +57,74 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.36.4",
-    "@stripe/stripe-js": "^3.2.0",
+    "@sanity/vision": "^3.44.0",
+    "@stripe/stripe-js": "^3.5.0",
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/typography": "^0.5.12",
-    "@tanstack/react-table": "^8.15.3",
-    "@vercel/analytics": "^1.2.2",
+    "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/react-table": "^8.17.3",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.1.0",
-    "clsx": "^2.1.0",
+    "cloudinary": "^2.2.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.7",
-    "embla-carousel-react": "8.0.1",
-    "framer-motion": "^11.0.25",
-    "lucide-react": "^0.365.0",
-    "next": "^14.1.4",
+    "drizzle-orm": "^0.31.0",
+    "embla-carousel-react": "8.1.3",
+    "framer-motion": "^11.2.10",
+    "lucide-react": "^0.383.0",
+    "next": "^14.2.3",
     "next-auth": "5.0.0-beta.9",
-    "next-sanity": "^8.5.5",
+    "next-sanity": "^9.3.10",
     "next-themes": "^0.3.0",
     "nextjs-google-analytics": "^2.3.3",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.51.2",
-    "react-resizable-panels": "^2.0.16",
+    "react-hook-form": "^7.51.5",
+    "react-resizable-panels": "^2.0.19",
     "react-use": "^17.5.0",
-    "sanity": "^3.36.4",
-    "sharp": "^0.33.3",
+    "sanity": "^3.44.0",
+    "sharp": "^0.33.4",
     "sonner": "^1.4.41",
-    "stripe": "^14.24.0",
-    "styled-components": "^6.1.8",
-    "tailwind-merge": "^2.2.2",
+    "stripe": "^15.9.0",
+    "styled-components": "^6.1.11",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0",
-    "zod": "^3.22.4",
+    "vaul": "^0.9.1",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.1.4",
-    "@next/env": "^14.1.4",
-    "@playwright/test": "^1.43.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
+    "@next/bundle-analyzer": "^14.2.3",
+    "@next/env": "^14.2.3",
+    "@playwright/test": "^1.44.1",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.5",
-    "@types/pg": "^8.11.4",
-    "@types/react": "18.2.74",
-    "@types/react-dom": "18.2.24",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "9.0.0",
-    "eslint-config-next": "14.1.4",
+    "@types/node": "^20.14.0",
+    "@types/pg": "^8.11.6",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "drizzle-kit": "^0.22.1",
+    "eslint": "9.4.0",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.0",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-packagejson": "^2.4.14",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier-plugin-packagejson": "^2.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.2",
-    "typescript": "5.4.4",
+    "tsx": "^4.11.2",
+    "typescript": "5.4.5",
     "webpack": "^5.91.0"
   },
   "prisma": {
