--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,36 @@
-version: '3'
 services:
   db:
     image: postgres
     restart: always
     environment:
-      POSTGRES_DB: explor3
+      POSTGRES_DB: xenon
       POSTGRES_USER: default
       POSTGRES_PASSWORD: mypassword
     volumes:
       - ./data:/var/lib/postgresql/data
     ports:
       - 5432:5432
+
+  # neon:
+  #   image: neondatabase/neon
+  #   restart: always
+  #   environment:
+  #     - POSTGRES_DB=xenon
+  #     - POSTGRES_USER=default
+  #     - POSTGRES_PASSWORD=mypassword
+  #   ports:
+  #     - 55432:55432
+
+  # pg_proxy:
+  #   image: ghcr.io/neondatabase/wsproxy:latest
+  #   environment:
+  #     APPEND_PORT: 'postgres:5432'
+  #     ALLOW_ADDR_REGEX: '.*'
+  #     LOG_TRAFFIC: 'true'
+  #   ports:
+  #     - '5433:80'
+  #   depends_on:
+  #     - postgres
 
   # app:
   #   image: node:20
