--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xenon",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "license": "MIT",
   "author": "lumen-limitless",
@@ -8,14 +8,12 @@
     "analyze": "ANALYZE=true next build",
     "prebuild": "",
     "build": "next build",
-    "db:generate": "drizzle-kit generate:pg",
-    "db:push": "drizzle-kit push:pg",
-    "db:seed": "tsx scripts/seed.ts",
-    "db:studio": "drizzle-kit studio",
+    "db": "drizzle-kit",
     "predev": "",
     "dev": "next dev",
     "format": "prettier --write .",
     "lint": "next lint",
+    "seed": "tsx scripts/seed.ts",
     "start": "next start",
     "test": "jest && exec playwright test",
     "test:e2e": "exec playwright test",
@@ -23,47 +21,48 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/core": "^0.32.0",
-    "@auth/drizzle-adapter": "0.0.0-manual.ab481298",
+    "@auth/drizzle-adapter": "1.4.1",
     "@ducanh2912/next-pwa": "^10.2.7",
-    "@hookform/resolvers": "^3.4.2",
+    "@hookform/resolvers": "^3.7.0",
+    "@next/third-parties": "^14.2.4",
     "@portabletext/react": "^3.1.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-context-menu": "^2.2.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.44.0",
-    "@stripe/stripe-js": "^3.5.0",
+    "@sanity/vision": "^3.49.0",
+    "@stripe/stripe-js": "^4.1.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/react-table": "^8.17.3",
+    "@tanstack/react-query": "^5.49.2",
+    "@tanstack/react-table": "^8.19.2",
     "@vercel/analytics": "^1.3.1",
-    "@vercel/postgres": "^0.8.0",
+    "@vercel/postgres": "^0.9.0",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
@@ -71,61 +70,64 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.31.0",
-    "embla-carousel-react": "8.1.3",
-    "framer-motion": "^11.2.10",
-    "lucide-react": "^0.383.0",
-    "next": "^14.2.3",
-    "next-auth": "5.0.0-beta.9",
-    "next-sanity": "^9.3.10",
+    "drizzle-orm": "^0.31.2",
+    "embla-carousel-react": "8.1.6",
+    "framer-motion": "^11.2.12",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.400.0",
+    "next": "^14.2.4",
+    "next-auth": "5.0.0-beta.19",
+    "next-cloudinary": "^6.6.2",
+    "next-sanity": "^9.4.2",
     "next-themes": "^0.3.0",
-    "nextjs-google-analytics": "^2.3.3",
-    "pg": "^8.11.5",
-    "postcss": "^8.4.38",
+    "pg": "^8.12.0",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.51.5",
-    "react-resizable-panels": "^2.0.19",
+    "react-hook-form": "^7.52.1",
+    "react-resizable-panels": "^2.0.20",
     "react-use": "^17.5.0",
-    "sanity": "^3.44.0",
+    "sanity": "^3.49.0",
     "sharp": "^0.33.4",
-    "sonner": "^1.4.41",
-    "stripe": "^15.9.0",
+    "sonner": "^1.5.0",
+    "stripe": "^16.1.0",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.2.3",
-    "@next/env": "^14.2.3",
-    "@playwright/test": "^1.44.1",
-    "@testing-library/jest-dom": "^6.4.5",
+    "@next/bundle-analyzer": "^14.2.4",
+    "@next/env": "^14.2.4",
+    "@playwright/test": "^1.45.1",
+    "@redux-devtools/extension": "^3.3.0",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.0",
+    "@types/lodash": "^4.17.6",
+    "@types/node": "^20.14.9",
     "@types/pg": "^8.11.6",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "drizzle-kit": "^0.22.1",
-    "eslint": "9.4.0",
-    "eslint-config-next": "14.2.3",
+    "drizzle-kit": "^0.22.8",
+    "eslint": "9.6.0",
+    "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.3.0",
-    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier": "^3.3.2",
+    "prettier-plugin-organize-imports": "^4.0.0",
     "prettier-plugin-packagejson": "^2.5.0",
-    "prettier-plugin-tailwindcss": "^0.6.1",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "ts-node": "^10.9.2",
-    "tsx": "^4.11.2",
-    "typescript": "5.4.5",
-    "webpack": "^5.91.0"
+    "tsx": "^4.16.2",
+    "typescript": "5.5.3",
+    "webpack": "^5.92.1"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} --transpile-only prisma/seed.ts"
